tests/NormalTests/paczka1/fuzzy1/12780449.err
Error in line 1: fW79 A281 4,1
Error in line 2: fW79 S865 51,6
Error in line 8: 68Jw5 S865 64,9
Error in line 22: 5rBmIEZ6 S865 97,7
Error in line 20: TbHmMs S904 53,3
Error in line 23: 5rBmIEZ6 S904 42,6
Error in line 28: 5rBmIEZ6 A519 22,2
Error in line 30: 5rBmIEZ6 S904 35,1
